remove Last Test question from AOE